tests/integration/should-fail/ExpressionDoubleOperators.twee
::Start
<<print 1**2>>
